Auth clean up
