# api.yaml
@@ -27,13 +27,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoginResult'
+                $ref: '#/components/schemas/LoginResponse'
         '401':
           description: Invalid login credentials
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResult'
+                $ref: '#/components/schemas/Error'
         '500':
           $ref: '#/components/responses/ErrorResponse'
   
@@ -55,13 +55,38 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoginResult'
+                $ref: '#/components/schemas/LoginResponse'
         '409':
           description: Username or email already in use.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResult'
+                $ref: '#/components/schemas/Error'
+        '500':
+          $ref: '#/components/responses/ErrorResponse'
+
+  /auth/validate:
+    post:
+      tags: [auth]
+      summary: Validate Account
+      description: Validates a user account using a token sent to their email when they registered.
+      operationId: authValidate
+      requestBody:
+        description: The credentials sent to the users email.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateRequest'
+      responses:
+        '200':
+          description: 'If success is true, the user was successfully validated.
+            In order to support error messages shown to the user, some failures 
+            will be embedded into the 200 response, so check the error field for 
+            more information if success is false.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidateResponse'
         '500':
           $ref: '#/components/responses/ErrorResponse'
 
@@ -73,7 +98,7 @@ paths:
       description: Refreshes a users access token. This will also cause the refresh token to be updated, so make sure to get both values from the response.
       operationId: authRefresh
       requestBody:
-        description: Refresh token from a LoginResult
+        description: Refresh token from a LoginResponse
         content:
           application/json:
             schema:
@@ -84,13 +109,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoginResult'
+                $ref: '#/components/schemas/LoginResponse'
         '401':
           description: Invalid refresh token.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResult'
+                $ref: '#/components/schemas/Error'
         '500':
           $ref: '#/components/responses/ErrorResponse'
 components:
@@ -122,7 +147,16 @@ components:
         refresh_token:
           type: string
           description: JWT that is used to generate a new access token.
-    LoginResult:
+    ValidateRequest:
+      type: object
+      properties:
+        token:
+          type: string
+          description: Validation token that was sent to the users email in order to finalize the account creation.
+        username:
+          type: string
+          description: The username of the user to validate.
+    LoginResponse:
       type: object
       properties:
         access_token:
@@ -131,7 +165,20 @@ components:
         refresh_token:
           type: string
           description: A token that can be used to generate a new access token when the access token expires.
-    ErrorResult:
+    ValidateResponse:
+      type: object
+      required: [success]
+      properties:
+        success:
+          type: boolean
+          description: Determines if the user was successfully validated or not.
+        message:
+          type: string
+          description: A message to display to the user describing the result of the validation operation.
+          example: Successfully registered mystborn
+        error:
+          $ref: '#/components/schemas/Error'
+    Error:
       type: object
       required:
         - error_code
@@ -162,4 +209,4 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ErrorResult'
+            $ref: '#/components/schemas/Error'
