# gablet_users_api/src/controllers/refresh.rs
@@ -1,24 +1,20 @@
 use axum::{http::StatusCode, Json};
-use serde::{Deserialize, Serialize};
+use gablet_shared_api::errors::{ErrorResult, get_internal_error, get_error_from_string, get_error};
 
 use crate::{
-    models::login_result::LoginResult,
+    models::{requests::RefreshRequest, responses::LoginResponse},
     utils::{
-        errors::{get_error, get_error_from_string, get_internal_error, ErrorResult},
         tokens::{confirm_refresh_token, get_access_token, get_refresh_token, save_refresh_token},
         users::find_user,
     },
     PG_POOL, TOKEN_ISSUER,
 };
 
-#[derive(Serialize, Deserialize)]
-pub struct RefreshRequest {
-    pub refresh: String,
-}
-
 pub async fn refresh(
     Json(request): Json<RefreshRequest>,
-) -> Result<Json<LoginResult>, (StatusCode, Json<ErrorResult>)> {
+) -> Result<Json<LoginResponse>, (StatusCode, Json<ErrorResult>)> {
+    tracing::trace!("Refreshing {:?}", request);
+
     let RefreshRequest { refresh } = request;
     let pool = PG_POOL.get().unwrap().clone();
 
@@ -60,5 +56,5 @@ pub async fn refresh(
         .await
         .map_err(|err| get_internal_error(err).to_tuple())?;
 
-    Ok(Json(LoginResult::new(access, refresh)))
+    Ok(Json(LoginResponse::new(access, refresh)))
 }
